option java_package = "nta.engine";
option java_outer_classname = "LeafServerProtos";
option java_generic_services = false;
option java_generate_equals_and_hash = true;

import "CatalogProtos.proto";

enum QueryStatus {
     PENDING = 0;
     INPROGRESS = 1;
     FINISHED = 2;
     FAILED = 3;
     ABORTED = 4;
}

message SubQueryRequestProto {
	required string id = 1;
	repeated TabletProto tablets = 2;
	required string dest = 3;
	required string query = 4;
}

message SubQueryResponseProto {
}

message AssignTabletRequestProto {
	required TabletProto tablets = 1;
}

message ReleaseTabletRequestProto {
	required TabletProto tablets = 1;
}
